# rsbf

./: .gitignore  Cargo.toml  README.md  index.html  mime-types.types  package.json  pnpm-lock.yaml
frontend/: app.tsx
frontend/components/: BrainfuckInterpreter.tsx  BrainfuckRepl.tsx
frontend/util/: constants.ts
src/: interpreter.rs  lib.rs  main.rs  parser.rs
src/parser/: error.rs  mod.rs  parse.rs  parser.rs
www/: index.html
