[package]
name = "rsbf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1.0.71"
wasm-bindgen = "0.2.85"
js-sys = "0.3.63"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rsbf"
path = "src/lib.rs"

[[bin]]
name = "rsbf-bin"
path = "src/main.rs"
